--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,12 @@ code {
     monospace;
 }
 
+#root {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: orange;
+
+}
