--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -3,6 +3,12 @@
     color: black;
 }
 
+.version {
+    color: #BBB;
+    font-size: .8rem;
+}
+
 .logo {
     max-height: 60px;
+    padding-right: 10px;
 }
