--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ html {
   min-height:100%;
 }
 body {
-  background: orange;
+  background: #22295d;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
