--- a/src/containers/Content/style.css
+++ b/src/containers/Content/style.css
@@ -7,3 +7,10 @@
     min-width: 500px;
     position: relative;
 }
+.previous-link {
+    position: absolute;
+    left:10px;
+    bottom: -20px;
+    color: white;
+    font-size: 12px;
+}
