--- a/src/components/Results/NetworkView/NetworkToolbar/NDExSignInButton/style.css
+++ b/src/components/Results/NetworkView/NetworkToolbar/NDExSignInButton/style.css
@@ -1,56 +1,70 @@
-/* start: taken from https://www.bootply.com/rY3MGdh1HO */
-.vertical-divider {
-    position: absolute;
-    z-index: 10;
-    top: 50%;
-    left: 50%;
-    margin: 0;
-    padding: 0;
-    width: auto;
-    height: 50%;
-    line-height: 0;
-    text-align:center;
-    text-transform: uppercase;
-    transform: translateX(-50%);
-    font-size: 1.4em;
-}
-.row-divided > .vertical-divider,
-.row-divided > .vertical-divider {
-    height: calc(56% - 1rem);
-}
-.vertical-divider:before,
-.vertical-divider:after {
-    position: absolute;
-    left: 50%;
-    content: '';
-    z-index: 9;
-    border-left: 1px solid rgba(34,36,38,.15);
-    border-right: 1px solid rgba(255,255,255,.1);
-    width: 0;
-    height: calc(100% - 1rem);
-}
-.vertical-divider:before {
-    top: -100%;
-}
-.vertical-divider:after {
-    top: auto;
-    bottom: 0;
-}
-.row-divided {
-    position:relative;
-}
-
-.row-divided > [class^="col-"],
-.row-divided > [class*=" col-"] {
-    padding-left: 30px;  /* gutter width (give a little extra room) */
-    padding-right: 30px; /* gutter width (give a little extra room) */
-}
-
 .text-danger {
     word-wrap: break-word;
+    color: #CD0606;
 }
 
-.AlignRight {
-    margin-top: 1em;
-    float:right;
+#form-dialog-title {
+    border-bottom: 1px solid #CCC;
+    padding: 14px;
+    margin-bottom: 10px;
+}
+
+.NDExSignInContainer {
+    padding-top: 10px;
+    position: relative;
+}
+
+.grid-paper {
+    text-align: center;
+    height: 100%;
+}
+.grid {
+    position: relative;
+}
+.grid-content {
+    padding: 10px;
+}
+
+.googleLogo { 
+    height: 130px ;
+    width: 130px;
+    max-height: 100%;
+    max-width: 100%;
+}
+.googleButtonDisabled {
+    color: #B6B6B6;
+    background-color: #FFF;
+    cursor: not-allowed;
+}
+.googleSignInText {
+    margin-top: 1.5em;
+    margin-left: 3em;
+    margin-right: 3em;
+}
+
+.ndex-account-links {
+    font-size: .8em;
+    text-align: left;
+    padding: 5px;
+    padding-top: 10px;
+}
+
+.form-control {
+    width: 100%;
+}
+.form-input {
+    margin: 20px;
+    padding:0;
+}
+
+.credentials-button-container {
+    text-align: right;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.credentials-button-container .btn {
+    margin: 5px;
+    padding: 5px 10px;
 }
