--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@ html {
   min-height:100%;
 }
 body {
-  background: #22295d;
+  /* background: #22295d; */
+  background: rgb(5, 42, 244);
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
